<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search_text">Поиск</string>
    <string name="library_text">Медиатека</string>
    <string name="settings_text">Настройки</string>
    <string name="dark_theme_text">Темная тема</string>
    <string name="share_app_text">Поделиться приложением</string>
    <string name="support_call_text">Написать в поддержку</string>
    <string name="user_agreement_text">Пользовательское соглашение</string>
</resources>