<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/corner_top_intent_14dp"
        android:orientation="vertical"
        android:padding="@dimen/corner_activity_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back_arrow_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingEnd="24dp"
                android:src="@drawable/arrow_back_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yandex_sans_display_regular"
                android:letterSpacing="0"
                android:text="@string/settings_text"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/text_22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/string_indent_40dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/yandex_sans_display_regular"
                    android:letterSpacing="0"
                    android:text="@string/dark_theme_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_16sp" />

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_gravity="end"
                    android:switchMinWidth="48dp"
                    android:thumbTint="@color/grey"
                    android:trackTint="@color/light_grey"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/string_indent_40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/yandex_sans_display_regular"
                    android:letterSpacing="0"
                    android:text="@string/share_app_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:src="@drawable/share_icon"
                    app:tint="@color/grey" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/string_indent_40dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/yandex_sans_display_regular"
                    android:letterSpacing="0"
                    android:text="@string/support_call_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:src="@drawable/support_icon"
                    app:tint="@color/grey" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/string_indent_40dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/yandex_sans_display_regular"
                    android:letterSpacing="0"
                    android:text="@string/user_agreement_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:src="@drawable/arrow_forward_icon"
                    app:tint="@color/grey" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
